--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class = "banner" id ="bannertop"> 
         <div id = "photo"> </div>
-        <div id = "name"> Tyrone Best</div>
+        <div id = "name"> Tyrone Best -</div>
             
         </div>
         <!--No HTML Beyond This Line-->
