--- a/mobilefall2016/onebutton/index.html
+++ b/mobilefall2016/onebutton/index.html
@@ -8,7 +8,7 @@
         <link rel = "stylesheet" href="stely.css">
     </head>
     <body>
-        <button id "btn">Button</button>
+        <button id "btn">Four Events</button>
         
         <script src="script.js"></script>
     </body>
