--- a/mobilefall2016/onebutton/index.html
+++ b/mobilefall2016/onebutton/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
+    <!--doctype
+the goal : show tha t the button responds to then 4 events 
     
+    mousedown
+    mouseover
+    mouseup
+    mousout
+secondary goal: center the button in the middle of the page    
+    -->
     <head>
         <title>
        one button, four events     
@@ -9,6 +17,8 @@
     </head>
     <body>
         <button id "btn">Four Events</button>
+        <br>
+        <span id= "msg">(message goes here)</span>
         
         <script src="script.js"></script>
     </body>
