--- a/mobilefall2016/onebutton/index.html
+++ b/mobilefall2016/onebutton/index.html
@@ -13,7 +13,7 @@ secondary goal: center the button in the middle of the page
         <title>
        one button, four events     
         </title>
-        <link rel = "stylesheet" href="stely.css">
+        <link rel = "stylesheet" href="style.css">
     </head>
     <body>
         <button id "btn">Four Events</button>
