--- a/mobilefall2016/onebutton/index.html
+++ b/mobilefall2016/onebutton/index.html
@@ -16,7 +16,7 @@ secondary goal: center the button in the middle of the page
         <link rel = "stylesheet" href="style.css">
     </head>
     <body>
-        <button id ="btn">Four Events</button>
+        <div id ="bttn"><button id ="btn">Four Events</button></div>
         <br>
         <span id= "msg">(message goes here)</span>
         
