--- a/FinalProject/Quick Music/index.html
+++ b/FinalProject/Quick Music/index.html
@@ -11,6 +11,8 @@
 	<title>Quick Music </title>
 	<script src ="songs.js"></script>
 	<link rel = "stylesheet" href =" style.css"/>
+		<link rel="stylesheet" href="normalize.css">  
+	   <script src="prefixfree.js"></script>   
 </head>
 
 <body>
