--- a/FinalProject/QuickMusic/index.html
+++ b/FinalProject/QuickMusic/index.html
@@ -23,9 +23,9 @@
                         <div>
                             <select id="choices">
                                 <option>Select A Song</option>
-                                <option>Do You Mind</option>
-                                <option>Mona Lisas</option>
-                                <option>Faithfully</option>					
+                                <option>Night Job</option>
+                                <option>44 Bars</option>
+                                <option>Rush</option>					
                             </select>
                         </div>
                         <div id="songTitle"></div>
