--- a/FinalProject/QuickMusic/index.html
+++ b/FinalProject/QuickMusic/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div id="holder">
 			<div id="app">
-                <div id="controlsFrame">
+                <div id="controlsFrame" class =" box vertical">
                     <div id="controls">
                         <br>
                         <div><audio id="player" controls></audio></div>
@@ -31,7 +31,7 @@
                         <div id="songTitle"></div>
                     </div><!-- END of controls -->                
                 </div><!-- END of controlsFrame -->  
-				<div id="pictureFrame"></div>			
+				<div id="pictureFrame" class =" box vertical "></div>			
 			</div><!-- END of app -->
 		</div><!-- END of holder -->
 	<script>
